--- a/force-app/main/default/layouts/Asset-Formato de activos.layout-meta.xml
+++ b/force-app/main/default/layouts/Asset-Formato de activos.layout-meta.xml
@@ -31,6 +31,10 @@
                 <behavior>Edit</behavior>
                 <field>SerialNumber</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Test_Number__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
