US-0000036 2 Commits Test

--- a/force-app/main/default/layouts/Account-Formato de cuentas.layout-meta.xml
+++ b/force-app/main/default/layouts/Account-Formato de cuentas.layout-meta.xml
@@ -19,6 +19,18 @@
                 <behavior>Edit</behavior>
                 <field>ParentId</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>External_ID__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Zero_Field__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>CWEO__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
